--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -23,3 +23,10 @@
     --sidebar-border: 240 3.7% 15.9%;
     --sidebar-ring: 217.2 91.2% 59.8%}
 }
+
+@layer base {
+  @font-face {
+    font-family: "Geist";
+    src: url("/fonts/Geist.ttf");
+  }
+}
