--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -3,6 +3,11 @@
 @tailwind utilities;
 
 @layer base {
+  a.active {
+    font-weight: 600;
+    letter-spacing: -0.020em;
+  }
+
   :root {
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
