--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -2,6 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
+.outlineText {
+  color: #9CFF97;
+  background: #2D2D2D;
+  background-size: 100% 100%;
+  background-clip: text;
+  -webkit-text-stroke: 2px transparent;
+  padding: 20px;
+}
+
+.outlineTextDark {
+  color: #2D2D2D;
+  background: white;
+  background-size: 100% 100%;
+  background-clip: text;
+  -webkit-text-stroke: 2px transparent;
+  padding: 20px;
+}
+
 @layer base {
   a.active {
     font-weight: 600;
